-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.9.0
-
None
-
a1612886b (dev), e57fff634 (dev), 0f88982f0 (6.9), 093ab48ad (6.9)
Build fails when I build with
-DFEATURE_style_fusion=OFF \
-DFEATURE_style_stylesheet=OFF \
-DFEATURE_style_windows=OFF \
Probably because of -DFEATURE_style_windows=OFF \
Error:
FAILED: qtbase/src/widgets/CMakeFiles/Widgets.dir/kernel/qwidget.cpp.o /usr/bin/ccache /usr/bin/c++ -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_WIDGETS_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_LEAN_HEADERS=1 -DQT_MOC_COMPAT -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_NO_QSNPRINTF -DQT_NO_STD_FORMAT_SUPPORT -DQT_NO_USING_NAMESPACE -DQT_USE_NODISCARD_FILE_OPEN -DQT_USE_QSTRINGBUILDER -DWidgets_EXPORTS -D_GLIBCXX_ASSERTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/build/debian/build-host/qtbase/src/widgets/Widgets_autogen/include -I/build/debian/build-host/qtbase/include -I/build/debian/build-host/qtbase/include/QtWidgets -I/build/qtbase/src/widgets -I/build/debian/build-host/qtbase/src/widgets -I/build/qtbase/src/widgets/dialogs -I/build/debian/build-host/qtbase/include/QtWidgets/6.9.0 -I/build/debian/build-host/qtbase/include/QtWidgets/6.9.0/QtWidgets -I/build/debian/build-host/qtbase/include/QtCore -I/build/qtbase/mkspecs/linux-g++ -I/build/debian/build-host/qtbase/include/QtGui -I/build/debian/build-host/qtbase/src/corelib -I/build/debian/build-host/qtbase/include/QtCore/6.9.0 -I/build/debian/build-host/qtbase/include/QtCore/6.9.0/QtCore -I/build/debian/build-host/qtbase/src/gui -I/build/debian/build-host/qtbase/include/QtGui/6.9.0 -I/build/debian/build-host/qtbase/include/QtGui/6.9.0/QtGui -std=gnu++17 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fPIC -U_FORTIFY_SOURCE -Wsuggest-override -fcf-protection=full -D_FORTIFY_SOURCE=2 -ftrivial-auto-var-init=pattern -fstack-protector-strong -fstack-clash-protection -fno-exceptions -MD -MT qtbase/src/widgets/CMakeFiles/Widgets.dir/kernel/qwidget.cpp.o -MF qtbase/src/widgets/CMakeFiles/Widgets.dir/kernel/qwidget.cpp.o.d -o qtbase/src/widgets/CMakeFiles/Widgets.dir/kernel/qwidget.cpp.o -c /build/qtbase/src/widgets/kernel/qwidget.cpp In file included from /build/debian/build-host/qtbase/include/QtWidgets/6.9.0/QtWidgets/private/qstylesheetstyle_p.h:1, from /build/qtbase/src/widgets/kernel/qwidget.cpp:39: /build/qtbase/src/widgets/styles/qstylesheetstyle_p.h:8:10: fatal error: private/qwindowsstyle_p.h: No such file or directory 8 | #include "private/qwindowsstyle_p.h" | ^~~~~~~~~~~~~~~~~~~~~~~~~~ compilation terminated.
For Gerrit Dashboard: QTBUG-136341 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
642645,2 | Widgets/Stylesheets: Remove double negations for stylehseet feature | dev | qt/qtbase | Status: MERGED | +2 | 0 |
642646,2 | Widgets/Stylesheets: compile without FEATURE_style_stylesheet | dev | qt/qtbase | Status: MERGED | +2 | 0 |
642987,2 | Widgets/Stylesheets: Remove double negations for stylehseet feature | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
642988,2 | Widgets/Stylesheets: compile without FEATURE_style_stylesheet | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |