Widgets/Stylesheets: Remove double negations for stylehseet feature

Replace ifndef QT_NO_STYLE_STYLESHEET antipattern by
if QT_CONFIG(style_stylesheet).

Task-number: QTBUG-136341
Change-Id: I8f5d5ff0b7b5cce010df167977214bc92a9443b7
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit a1612886bade6192fecad33d0dacb1d24792e315)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>